--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yummy</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/index-style.css">
 </head>
@@ -24,8 +26,32 @@
         </header>
         <div class="middle">
             <div class="slideshow">
-                <img class="spring" src="img/spring.jpg">
-            </div>
+                <!-- Carousel -->
+                <div id="demo" class="carousel slide" data-bs-ride="carousel">
+                  <!-- Indicators/dots -->
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                  </div>
+                  <!-- The slideshow/carousel -->
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="img/spring.jpg" alt="slideshow1" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/summer.jpg" alt="slideshow2" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/fall.jpg" alt="slideshow3" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/winter.jpg" alt="slideshow4" class="d-block w-100">
+                    </div>
+                  </div>
+                </div>
+              </div>
             <div class="left-panel">
                <div class="today-fruit">
                    <p>오늘의 제철 과일</p>
