--- a/index.html
+++ b/index.html
@@ -6,43 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yummy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
     <div class="container">
-      <nav>
-        <img class="logo" src="img/logo.png">
+      <header>
+        <a href="#" onclick="location.href='index.html'"><img class="logo" src="img/logo.png"></a>
         <div class="menu">
-          <a href="#" onclick="location.href='spring.html'">봄</a>
-          <a href="#" onclick="location.href='summer.html'">여름</a>
-          <a href="#" onclick="location.href='fall.html'">가을</a>
-          <a href="#" onclick="location.href='winter.html'">겨울</a>
+            <a href="#" onclick="location.href='spring.html'">봄</a>
+            <a href="#" onclick="location.href='summer.html'">여름</a>
+            <a href="#" onclick="location.href='fall.html'">가을</a>
+            <a href="#" onclick="location.href='winter.html'">겨울</a>
         </div>
-      </nav>
-      <div class="middle">
-        <div class="slideshow">
-          <img class="spring" src="img/spring.jpg">
-        </div>
-        <div class="panel">
-          <div class="left-panel">
-            <div class="today-fruit">
-              <p class="title">오늘의 제철 과일</p>
-              <img class="strawberry" src="img/strawberry.jpg">
-              <div class="fruit-commend">
-                <p>5월달 제철 과일 딸기를 추천드립니다<br/>비타민 C가 가득해 건강에 좋습니다</p>
-              </div>
+    </header>
+    <div class="middle">
+      <div class="slideshow">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- Indicators/dots -->
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+          </div>
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/spring.jpg" alt="봄" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="img/summer.jpg" alt="여름" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="img/fall.jpg" alt="가을" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="img/winter.jpg" alt="겨울" class="d-block w-100">
             </div>
           </div>
-          <div class="right-panel">
-            <div class="fruit-receipe">
-              <p class="title">이런 요리는 어떠세요?</p>
-              <img class="strawberry-canape" src="img/strawberry_canape.jpg">
-              <div class="receipe">
-                <p>크래커 위에 크림치즈<br/>크림치즈 위에 딸기<br/>딸기 카나페 완성</p>
-              </div>
-            </div>
-          </div>
+          <!-- Left and right controls/icons -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
         </div>
+        <main id="mainCardID">
+          <article class="today-fruit">
+              <h4 class="card-title">오늘의 제철 과일</h4>
+              <div class="comment">
+                <figure class="card-img"><img class="strawberry" src="img/strawberry.jpg"></figure>
+                <p class="card-menu">
+                  5월달 제철 과일 딸기를 추천드립니다<br/>
+                  비타민 C가 가득해 건강에 좋습니다
+                </p>
+              </div>
+          </article>
+          <article class="fruit-receipe">
+            <h4 class="card-title">이런 요리는 어떠세요?</h4>
+            <figure class="card-img"><img class="strawberry-canape" src="img/strawberry_canape.jpg"></figure>
+            <p class="card-menu">
+              크래커 위에 크림치즈<br/>
+              크림치즈 위에 딸기<br/>
+              딸기 카나페 완성
+            </p>
+          </article>
+        </main>
       </div>
     </div>
     <footer>
