코드 받아 합치기

--- a/summer.html
+++ b/summer.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>여름</title>
+    <link rel="stylesheet" href="css/summer-style.css">
 </head>
 <body>
-    <p>여름</p>
+    <div class="container">
+        <header>
+            <a href="#" onclick="location.href='index.html'"><img class="logo" src="img/logo.png"></a>
+            <div class="menu">
+                <a href="#" onclick="location.href='spring.html'">봄</a>
+                <a href="#" onclick="location.href='summer.html'">여름</a>
+                <a href="#" onclick="location.href='fall.html'">가을</a>
+                <a href="#" onclick="location.href='winter.html'">겨울</a>
+            </div>
+        </header>
+        <div class="banner">
+            <img class="summer" src="img/summer.jpg">
+            <h1>여름</h1>
+        </div>
+        <div class="middle">
+            <div class="season-fruit">
+                <h2>여름 제철 과일</h2>
+                <img class="watermelon-img" src="img/watermelon.jpg">
+                <div class="watermelon">
+                    <h3>수박</h3>
+                    <P>6~8월이 제철인 수박<br/>
+                       여름하면 생각나는 대표적인 과일입니다.<br/>
+                       수분 보충에 탁월하고 신경 안정에 도움을 줍니다.
+                    </P>
+                </div>
+                <img class="grape-img" src="img/grape.jpg">
+                <div class="grape">
+                    <h3>포도</h3>
+                    <P>새콤달콤한 맛있는 포도!<br/>
+                        포도껍질과 씨에는 영양소가 풍부하게 들어있습니다.<br/>
+                        손, 발, 얼굴이 붓는 것을 예방해주는 효과가 있습니다.
+                    </P>
+                </div>
+                <img class="peach-img" src="img/peach.jpg">
+                <div class="peach">
+                    <h3>복숭아</h3>
+                    <P>모두가 좋아하는 달달한 복숭아!<br/>
+                        여름 제철 과일인 복숭아는 피로회복제로도 불립니다.<br/>
+                        비타민이 풍부해 피로 회복에 도움이 되어 근육에 쌓인 피로물을 배출시킵니다.
+                    </P>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
