--- a/fall.html
+++ b/fall.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <div class="banner">
-            <img class="fall" src="img/fall.jpg">
+            <img class="fall" src="img/fall-banner.jpg">
             <h1>가을</h1>
         </div>
         <div class="middle">
