--- a/winter.html
+++ b/winter.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <div class="banner">
-            <img class="winter" src="img/winter.jpg">
+            <img class="winter" src="img/winter-banner.jpg">
             <h1>겨울</h1>
         </div>
         <div class="middle">
