--- a/spring.html
+++ b/spring.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <div class="banner">
-            <img class="spring" src="img/spring.jpg">
+            <img class="spring" src="img/spring-banner.jpg">
             <h1>봄</h1>
         </div>
         <div class="middle">
@@ -27,19 +27,25 @@
                 <h2>봄 제철 과일</h2>
                 <div clsas="strawberry">
                     <a href="#" onclick="location.href='strawberry-receipe.html'"><img class="strawberry-img" src="img/strawberry.jpg"></a>
-                    <h3>딸기</h3>
-                    <p>1~5월이 제철인 딸기<br/>비타민 C가 가득!!!<br/>아주 짱입니다</p>
+                    <div class="strawberry-comment">
+                        <h3>딸기</h3>
+                        <p>1~5월이 제철인 딸기<br/>비타민 C가 가득!!!<br/>아주 짱입니다</p>
+                    </div>
                 </div>
                 <div class="hanrabong">
                     <img class="hanrabong-img" src="img/hanrabong.jpg">
-                    <h3>한라봉</h3>
-                    <p>12~3월이 제철인 한라봉<br/>옐로우 푸드의 대표적인 감귤류 과일입니다<br/>
-                   카르티노이드 성분이 들어있어 뛰어난 항산화제입니다</p>
+                    <div class="hanrabong-comment">
+                        <h3>한라봉</h3>
+                        <p>12~3월이 제철인 한라봉<br/>옐로우 푸드의 대표적인 감귤류 과일입니다<br/>
+                        카르티노이드 성분이 들어있어 뛰어난 항산화제입니다</p>
+                    </div>
                 </div>
                 <div class="maesil">
                     <img class="maesil-img" src="img/maesil.jpg">
-                    <h3>매실</h3>
-                    <p>5~6월이 제철인 매실<br/>새콤달콤한 맛이 짱<br/>피로회복에 절대강자입니다</p>
+                    <div class="maesil-comment">
+                        <h3>매실</h3>
+                        <p>5~6월이 제철인 매실<br/>새콤달콤한 맛이 짱<br/>피로회복에 절대강자입니다</p>
+                    </div>
                 </div>
             </div>
         </div>
