--- a/index.html
+++ b/index.html
@@ -10,79 +10,60 @@
     <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
-    <div class="container">
-      <header>
-        <a href="#" onclick="location.href='index.html'"><img class="logo" src="img/logo.png"></a>
-        <div class="menu">
-            <a href="#" onclick="location.href='spring.html'">봄</a>
-            <a href="#" onclick="location.href='summer.html'">여름</a>
-            <a href="#" onclick="location.href='fall.html'">가을</a>
-            <a href="#" onclick="location.href='winter.html'">겨울</a>
-        </div>
+  <div class="container">
+    <header>
+      <img class="logo" src="img/logo.png">
+      <div class="menu">
+          <a href="#" onclick="location.href='spring.html'">봄</a>
+          <a href="#" onclick="location.href='summer.html'">여름</a>
+          <a href="#" onclick="location.href='fall.html'">가을</a>
+          <a href="#" onclick="location.href='winter.html'">겨울</a>
+      </div>
     </header>
     <div class="middle">
-      <div class="slideshow">
-        <!-- Carousel -->
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-          <!-- Indicators/dots -->
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/spring.jpg" alt="First slide">
           </div>
-          <!-- The slideshow/carousel -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/spring.jpg" alt="봄" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="img/summer.jpg" alt="여름" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="img/fall.jpg" alt="가을" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="img/winter.jpg" alt="겨울" class="d-block w-100">
-            </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/summer.jpg" alt="Second slide">
           </div>
-          <!-- Left and right controls/icons -->
-          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-          </button>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/fall.jpg" alt="Third slide">
+          </div>
         </div>
-        <main id="mainCardID">
-          <article class="today-fruit">
-              <h4 class="card-title">오늘의 제철 과일</h4>
-              <div class="comment">
-                <figure class="card-img"><img class="strawberry" src="img/strawberry.jpg"></figure>
-                <p class="card-menu">
-                  5월달 제철 과일 딸기를 추천드립니다<br/>
-                  비타민 C가 가득해 건강에 좋습니다
-                </p>
-              </div>
-          </article>
-          <article class="fruit-receipe">
-            <h4 class="card-title">이런 요리는 어떠세요?</h4>
-            <figure class="card-img"><img class="strawberry-canape" src="img/strawberry_canape.jpg"></figure>
-            <p class="card-menu">
-              크래커 위에 크림치즈<br/>
-              크림치즈 위에 딸기<br/>
-              딸기 카나페 완성
-            </p>
-          </article>
-        </main>
       </div>
     </div>
-    <footer>
-        <div class="left">
-          <p>Creaters: 이혜령, 안소영<br/>
-          address: w2108@e-mirim.hs.kr, w2105@e-mirim.hs.kr
+
+    <main id="mainCardID">
+      <article class="today-fruit">
+        <h4 class="card-title">오늘의 제철 과일</h4>
+        <div class="comment">
+          <figure class="card-img"><img class="strawberry" src="img/strawberry.jpg"></figure>
+          <p class="card-menu">
+            5월달 제철 과일 딸기를 추천드립니다<br/>
+            비타민 C가 가득해 건강에 좋습니다
           </p>
         </div>
-    </footer>
+      </article>
+      <article class="fruit-receipe">
+        <h4 class="card-title">이런 요리는 어떠세요?</h4>
+        <figure class="card-img"><img class="strawberry-canape" src="img/strawberry_canape.jpg"></figure>
+        <p class="card-menu">
+          크래커 위에 크림치즈<br/>
+          크림치즈 위에 딸기<br/>
+          딸기 카나페 완성
+        </p>
+      </article>
+    </main>
+  </div>
+  <footer>
+      <div class="left">
+        <p>Creaters: 이혜령, 안소영<br/>
+        address: w2108@e-mirim.hs.kr, w2105@e-mirim.hs.kr
+        </p>
+      </div>
+  </footer>
 </body>
 </html>
