--- a/strawberry-receipe.html
+++ b/strawberry-receipe.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <header>
             <img class="logo" src="img/logo.png">
             <div class="menu">
                 <a href="#" onclick="location.href='spring.html'">봄</a>
@@ -17,7 +17,7 @@
                 <a href="#" onclick="location.href='fall.html'">가을</a>
                 <a href="#" onclick="location.href='winter.html'">겨울</a>
             </div>
-        </nav>
+        </header>
         <div class="middle">
             <div class="strawberry-receipe">
                 <h2>요리 레시피</h2>
