--- a/spring.html
+++ b/spring.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <a href="#" onclick="location.href='index.html'"><img class="logo" src="img/logo.png"></a>
+            <img class="logo" src="img/logo.png">
             <div class="menu">
                 <a href="#" onclick="location.href='spring.html'">봄</a>
                 <a href="#" onclick="location.href='summer.html'">여름</a>
