레시피 header > nav

--- a/strawberry-receipe.html
+++ b/strawberry-receipe.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <nav>
             <img class="logo" src="img/logo.png">
             <div class="menu">
                 <a href="#" onclick="location.href='spring.html'">봄</a>
@@ -17,34 +17,34 @@
                 <a href="#" onclick="location.href='fall.html'">가을</a>
                 <a href="#" onclick="location.href='winter.html'">겨울</a>
             </div>
-        </header>
+        </nav>
         <div class="middle">
             <div class="strawberry-receipe">
                 <h2>요리 레시피</h2>
-                <div class="strawberry-canape">
-                    <img class="strawberry-canape-img" src="img/strawberry_canape.jpg">
-                    <h3>딸기 카나페</h3>
-                </div>
-                <div class="strawberry-jam">
-                    <img class="strawberry-jam-img" src="img/strawberry_jam.jpg">
-                    <h3>딸기잼</h3>
-                </div>
-                <div class="strawberry-smoothie">
-                    <img class="strawberry-smoothie-img" src="img/strawberry_smoothie.jpg">
-                    <h3>딸기 스무디</h3>
-                </div>
-                <div class="strawberry-syrup">
-                    <img class="strawberry-syrup-img" src="img/strawberry_syrup.jpg">
-                    <h3>딸기청</h3>
-                </div>
-                <div class="strawberry-mozzi">
-                    <img class="strawberry-mozzi-img" src="img/strawberry-mozzi.jpg">
-                    <h3>딸기 찹쌀떡</h3>
-                </div>
-                <div class="strawberry-sandwich">
-                    <img class="strawberry-sandwich-img" src="img/strawberry-sandwich.jpg">
-                    <h3>딸기 샌드위치</h3>
-                </div>
+                    <div class="strawberry-canape">
+                        <img class="strawberry-canape-img" src="img/strawberry_canape.jpg">
+                        <h3>딸기 카나페</h3>
+                    </div>
+                    <div class="strawberry-jam">
+                        <img class="strawberry-jam-img" src="img/strawberry_jam.jpg">
+                        <h3>딸기잼</h3>
+                    </div>
+                    <div class="strawberry-smoothie">
+                        <img class="strawberry-smoothie-img" src="img/strawberry_smoothie.jpg">
+                        <h3>딸기 스무디</h3>
+                    </div>
+                    <div class="strawberry-syrup">
+                        <img class="strawberry-syrup-img" src="img/strawberry_syrup.jpg">
+                        <h3>딸기청</h3>
+                    </div>
+                    <div class="strawberry-mozzi">
+                        <img class="strawberry-mozzi-img" src="img/strawberry-mozzi.jpg">
+                        <h3>딸기 찹쌀떡</h3>
+                    </div>
+                    <div class="strawberry-sandwich">
+                        <img class="strawberry-sandwich-img" src="img/strawberry-sandwich.jpg">
+                        <h3>딸기 샌드위치</h3>
+                    </div>
             </div>
         </div>
     </div>
