여름 페이지 수정

--- a/summer.html
+++ b/summer.html
@@ -25,29 +25,32 @@
         <div class="middle">
             <div class="season-fruit">
                 <h2>여름 제철 과일</h2>
-                <img class="watermelon-img" src="img/watermelon.jpg">
-                <div class="watermelon">
+                <div class="water">
                     <h3>수박</h3>
-                    <P>6~8월이 제철인 수박<br/>
-                       여름하면 생각나는 대표적인 과일입니다.<br/>
-                       수분 보충에 탁월하고 신경 안정에 도움을 줍니다.
-                    </P>
+                    <div class="watermelon-comment">
+                        <img class="watermelon-img" src="img/watermelon.jpg">
+                        <div class = "textwt">6~8월이 제철인 수박<br/>
+                        여름하면 생각나는 대표적인 과일입니다.<br/>
+                        수분 보충에 탁월하고 신경 안정에 도움을 줍니다.</div>
+                    </div>
                 </div>
-                <img class="grape-img" src="img/grape.jpg">
                 <div class="grape">
                     <h3>포도</h3>
-                    <P>새콤달콤한 맛있는 포도!<br/>
+                    <div class="grape-comment">
+                        <img class="grape-img" src="img/grape.jpg">
+                        <div class = "textgp">>새콤달콤한 맛있는 포도!<br/>
                         포도껍질과 씨에는 영양소가 풍부하게 들어있습니다.<br/>
-                        손, 발, 얼굴이 붓는 것을 예방해주는 효과가 있습니다.
-                    </P>
+                         손, 발, 얼굴이 붓는 것을 예방해주는 효과가 있습니다.</div>
+                    </div>
                 </div>
-                <img class="peach-img" src="img/peach.jpg">
                 <div class="peach">
                     <h3>복숭아</h3>
-                    <P>모두가 좋아하는 달달한 복숭아!<br/>
-                        여름 제철 과일인 복숭아는 피로회복제로도 불립니다.<br/>
-                        비타민이 풍부해 피로 회복에 도움이 되어 근육에 쌓인 피로물을 배출시킵니다.
-                    </P>
+                    <div class="peach-comment">
+                        <img class="peach-img" src="img/peach.jpg">
+                        <div class = "textpc">모두가 좋아하는 달달한 복숭아!<br/>
+                            여름 제철 과일인 복숭아는 피로회복제로도 불립니다.<br/>
+                            비타민이 풍부해 피로 회복에 도움이 되어 근육에 쌓인 피로물을 배출시킵니다.</div>
+                    </div>
                 </div>
             </div>
         </div>
