--- a/spring.html
+++ b/spring.html
@@ -38,7 +38,7 @@
                         <img class="hanra-img" src="img/hanrabong.jpg">
                         <div class="texthr">12~3월이 제철인 한라봉 옐로우 푸드의 대표적인 감귤류 과일입니다
                             카르티노이드 성분이 들어있어 뛰어난 항산화제입니다</div>
-                    Xdiv>
+                    </div>
                 </div>
                 <div clsas="maesil">
                     <a href="strawberry-receipe.html"><h3>매실</h3></a>
