--- a/winter.html
+++ b/winter.html
@@ -26,24 +26,24 @@
             <div class="season-fruit">
                 <h2>겨울 제철 과일</h2>
                 <div class="tangerin">
-                    <img class="tangerin-img" src="img/tangerin.jpg">
+                    <h3>귤</h3>
                     <div class="tangerin-comment">
-                        <h3>귤</h3>
-                        <p>겨울철 하면 귤<br/>비타민 C가 풍부해 감기를 예방합니다.</p>
+                        <img class="tangerin-img" src="img/tangerin.jpg">
+                        <div class = "texttg">겨울철 하면 귤<br/>비타민 C가 풍부해 감기를 예방합니다.</div>
                     </div>
                 </div>
                 <div class="citron">
-                    <img class="citron-img" src="img/citron.jpg">
+                    <h3>유자</h3>
                     <div class="citron-comment">
-                        <h3>유자</h3>
-                        <p>겨울을 알리는 전령사 유자<br/>비타민 C로 감기 예방 가능!!!</p>
+                        <img class="citron-img" src="img/citron.jpg">
+                        <div class = "textct">겨울을 알리는 전령사 유자<br/>비타민 C로 감기 예방 가능!!!</div>
                     </div>
                 </div>
                 <div class="strawberry">
-                    <img class="strawberry-img" src="img/strawberry.jpg">
+                    <h3>딸기</h3>
                     <div class="strawberry-comment">
-                        <h3>딸기</h3>
-                        <p>1~5월이 제철인 딸기<br/>비타민 C가 가득!!!<br/>아주 짱입니다</p>
+                        <img class="strawberry-img" src="img/strawberry.jpg">
+                        <div class = "textstr">1~5월이 제철인 딸기<br/>비타민 C가 가득!!!<br/>아주 짱입니다</div>
                     </div>
                 </div>
             </div>
