--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css\index-style.css">
-
 </head>
 <body>
   <div class="container">
     <header>
-      <img class="logo" src="img/logo.png">
-      <div class="menu">
-          <a href="#" onclick="location.href='spring.html'">봄</a>
-          <a href="#" onclick="location.href='summer.html'">여름</a>
-          <a href="#" onclick="location.href='fall.html'">가을</a>
-          <a href="#" onclick="location.href='winter.html'">겨울</a>
-      </div>
+      <nav>
+        <div class="toggle" id="toggleID">
+          <i class='bx bx-menu'></i>
+        </div>
+        <img class="logo" src="img/logo.png">
+        <div class="menu" id="menuID">
+          <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
+          <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
+          <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
+          <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+        </div>
+      </nav>
     </header>
     <div class="middle">
       <div class="slideshow">
@@ -58,7 +62,7 @@
           <h4 class="card-title">오늘의 제철 과일</h4>
           <img class="strawberry" src="img/strawberry.jpg">
           <div class="card-menu">
-            <p>
+            <p><br/><br/><br/>
               5월달 제철 과일 딸기를 추천드립니다<br/>
               비타민 C가 가득해 건강에 좋습니다
             </p>
@@ -68,7 +72,7 @@
           <h4 class="card-title">이런 요리는 어떠세요?</h4>
           <img class="strawberry-canape" src="img/strawberry_canape.jpg">
           <div class="card-menu">
-            <p>
+            <p><br/><br/>
               크래커 위에 크림치즈<br/>
               크림치즈 위에 딸기<br/>
               딸기 카나페 완성
@@ -84,5 +88,6 @@
         </p>
       </div>
   </footer>
+  <script src="JS/main.js"></script>
 </body>
 </html>
