--- a/summer.html
+++ b/summer.html
@@ -10,14 +10,19 @@
 <body>
     <div class="container">
         <header>
-            <img class="logo" src="img/logo.png">
-            <div class="menu">
-                <a href="#" onclick="location.href='spring.html'">봄</a>
-                <a href="#" onclick="location.href='summer.html'">여름</a>
-                <a href="#" onclick="location.href='fall.html'">가을</a>
-                <a href="#" onclick="location.href='winter.html'">겨울</a>
-            </div>
-        </header>
+            <nav>
+              <div class="toggle" id="toggleID">
+                <i class='bx bx-menu'></i>
+              </div>
+              <a href="index.html"><img class="logo" src="img/logo.png"></a>
+              <div class="menu" id="menuID">
+                <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
+                <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
+                <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
+                <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+              </div>
+            </nav>
+          </header>
         <div class="banner">
             <img class="summer" src="img/summer.jpg">
             <h1>여름</h1>
@@ -55,5 +60,13 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="left">
+          <p>Creaters: 이혜령, 안소영<br/>
+          address: w2108@e-mirim.hs.kr, w2105@e-mirim.hs.kr
+          </p>
+        </div>
+    </footer>
+    <script src="JS/main.js"></script>
 </body>
 </html>
