--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <nav>
-        <div class="toggle" id="toggleID">
-          <i class='bx bx-menu'></i>
-        </div>
-        <img class="logo" src="img/logo.png">
-        <div class="menu" id="menuID">
-          <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
-          <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
-          <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
-          <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
-        </div>
-      </nav>
-    </header>
+    <nav>
+      <div class="toggle" id="toggleID">
+        <i class='bx bx-menu'></i>
+      </div>
+      <img class="logo" src="img/logo.png">
+      <div class="menu" id="menuID">
+        <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
+        <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
+        <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
+        <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+      </div>
+    </nav>
     <div class="middle">
       <div class="slideshow">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -32,29 +30,22 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/spring.jpg" class="d-block w-100" alt="...">
+              <img src="img/spring.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/summer.jpg" class="d-block w-100" alt="...">
+              <img src="img/summer.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/fall.jpg" class="d-block w-100" alt="...">
+              <img src="img/fall.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/winter.jpg" class="d-block w-100" alt="...">
+              <img src="img/winter.jpg" class="d-block w-100">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
       <main id="mainCardID">
