--- a/spring.html
+++ b/spring.html
@@ -9,20 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-              <div class="toggle" id="toggleID">
-                <i class='bx bx-menu'></i>
-              </div>
-              <a href="index.html"><img class="logo" src="img/logo.png"></a>
-              <div class="menu" id="menuID">
-                <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
-                <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
-                <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
-                <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
-              </div>
-            </nav>
-          </header>
+        <nav>
+            <div class="toggle" id="toggleID">
+              <i class='bx bx-menu'></i>
+            </div>
+            <img class="logo" src="img/logo.png">
+            <div class="menu" id="menuID">
+              <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
+              <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
+              <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
+              <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+            </div>
+          </nav>
         <div class="banner">
             <img class="spring" src="img/spring-banner.jpg">
             <h1>봄</h1>
@@ -61,6 +59,5 @@
           </p>
         </div>
     </footer>
-    <script src="JS/main.js"></script>
 </body>
 </html>
