boxicons CDN 추가, navbar-style link 삽입

--- a/spring.html
+++ b/spring.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>봄</title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/nav-style.css">
     <link rel="stylesheet" href="css/spring-style.css">
 </head>
 <body>
@@ -20,7 +22,7 @@
               <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
               <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
             </div>
-          </nav>
+        </nav>
         <div class="banner">
             <img class="spring" src="img/spring-banner.jpg">
             <h1>봄</h1>
@@ -59,5 +61,6 @@
           </p>
         </div>
     </footer>
+    <script src="JS/main.js"></script>
 </body>
 </html>
