--- a/strawberry-receipe.html
+++ b/strawberry-receipe.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>딸기 레시피</title>
-    <link rel="stylesheet" href="css\strawberry-recipe-style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/strawberry-recipe-style.css">
+    <link rel="stylesheet" href="css/nav-style.css">
 </head>
 <body>
     <div class="container">
@@ -21,30 +23,30 @@
         <div class="middle">
             <div class="strawberry-receipe">
                 <h2>요리 레시피</h2>
-                    <div class="polaroid strawberry-canape">
-                        <img class="strawberry-canape-img" src="img/strawberry_canape.jpg">
-                        <h3>딸기 카나페</h3>
-                    </div>
-                    <div class="polaroid strawberry-jam">
-                        <img class="strawberry-jam-img" src="img/strawberry_jam.jpg">
-                        <h3>딸기잼</h3>
-                    </div>
-                    <div class="polaroid strawberry-smoothie">
-                        <img class="strawberry-smoothie-img" src="img/strawberry_smoothie.jpg">
-                        <h3>딸기 스무디</h3>
-                    </div>
-                    <div class="polaroid strawberry-syrup">
-                        <img class="strawberry-syrup-img" src="img/strawberry_syrup.jpg">
-                        <h3>딸기청</h3>
-                    </div>
-                    <div class="polaroid strawberry-mozzi">
-                        <img class="strawberry-mozzi-img" src="img/strawberry-mozzi.jpg">
-                        <h3>딸기 찹쌀떡</h3>
-                    </div>
-                    <div class="polaroid strawberry-sandwich">
-                        <img class="strawberry-sandwich-img" src="img/strawberry-sandwich.jpg">
-                        <h3>딸기 샌드위치</h3>
-                    </div>
+                <div class="polaroid strawberry-canape">
+                    <img class="strawberry-canape-img" src="img/strawberry_canape.jpg">
+                    <h3>딸기 카나페</h3>
+                </div>
+                <div class="polaroid strawberry-jam">
+                    <img class="strawberry-jam-img" src="img/strawberry_jam.jpg">
+                    <h3>딸기잼</h3>
+                </div>
+                <div class="polaroid strawberry-smoothie">
+                    <img class="strawberry-smoothie-img" src="img/strawberry_smoothie.jpg">
+                    <h3>딸기 스무디</h3>
+                </div>
+                <div class="polaroid strawberry-syrup">
+                    <img class="strawberry-syrup-img" src="img/strawberry_syrup.jpg">
+                    <h3>딸기청</h3>
+                </div>
+                <div class="polaroid strawberry-mozzi">
+                    <img class="strawberry-mozzi-img" src="img/strawberry-mozzi.jpg">
+                    <h3>딸기 찹쌀떡</h3>
+                </div>
+                <div class="polaroid strawberry-sandwich">
+                    <img class="strawberry-sandwich-img" src="img/strawberry-sandwich.jpg">
+                    <h3>딸기 샌드위치</h3>
+                </div>
             </div>
         </div>
     </div>
