--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css\index-style.css">
+    <link rel="stylesheet" href="css/nav-style.css">
 </head>
 <body>
   <div class="container">
@@ -53,7 +54,7 @@
           <h4 class="card-title">오늘의 제철 과일</h4>
           <img class="strawberry" src="img/strawberry.jpg">
           <div class="card-menu">
-            <p><br/><br/><br/>
+            <p><br/><br/>
               5월달 제철 과일 딸기를 추천드립니다<br/>
               비타민 C가 가득해 건강에 좋습니다
             </p>
