--- a/summer.html
+++ b/summer.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>여름</title>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/summer-style.css">
+    <link rel="stylesheet" href="css/nav-style.css">
 </head>
 <body>
     <div class="container">
