--- a/spring.html
+++ b/spring.html
@@ -17,10 +17,12 @@
             </div>
             <img class="logo" src="img/logo.png">
             <div class="menu" id="menuID">
-              <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
-              <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
-              <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
-              <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+                <ul class = "nav-list">
+                    <li><a href="#" onclick="location.href='spring.html'" class="item">봄</a></li>
+                    <li><a href="#" onclick="location.href='summer.html'" class="item">여름</a></li>
+                    <li><a href="#" onclick="location.href='fall.html'" class="item">가을</a></li>
+                    <li><a href="#" onclick="location.href='winter.html'" class="item">겨울</a></li>
+                </ul>
             </div>
         </nav>
         <div class="banner">
