--- a/fall.html
+++ b/fall.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav>
-              <div class="toggle" id="toggleID">
-                <i class='bx bx-menu'></i>
-              </div>
-              <a href="index.html"><img class="logo" src="img/logo.png"></a>
-              <div class="menu" id="menuID">
-                <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
-                <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
-                <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
-                <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
-              </div>
-            </nav>
-          </header>
+        <nav>
+            <div class="toggle" id="toggleID">
+              <i class='bx bx-menu'></i>
+            </div>
+            <img class="logo" src="img/logo.png">
+            <div class="menu" id="menuID">
+                <ul class = "nav-list">
+                    <li><a href="#" onclick="location.href='spring.html'" class="item">봄</a></li>
+                    <li><a href="#" onclick="location.href='summer.html'" class="item">여름</a></li>
+                    <li><a href="#" onclick="location.href='fall.html'" class="item">가을</a></li>
+                    <li><a href="#" onclick="location.href='winter.html'" class="item">겨울</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">
             <img class="fall" src="img/fall-banner.jpg">
             <h1>가을</h1>
