--- a/spring.html
+++ b/spring.html
@@ -15,7 +15,7 @@
             <div class="toggle" id="toggleID">
               <i class='bx bx-menu'></i>
             </div>
-            <img class="logo" src="img/logo.png">
+            <a href="#" onclick="location.href='index.html'" class="item"><img class="logo" src="img/logo.png"></a>
             <div class="menu" id="menuID">
                 <ul class = "nav-list">
                     <li><a href="#" onclick="location.href='spring.html'" class="item">봄</a></li>
